--- a/exploratory_analysis.ipynb
+++ b/exploratory_analysis.ipynb
@@ -1,25 +1,49 @@
-from pyspark.sql import SparkSession
-from pyspark.sql.functions import col, length, to_date, regexp_replace, lower, when
-
-spark = SparkSession.builder.appName("ProcesamientoTweets").getOrCreate()
-
-df = spark.read.csv("bigdata-sentiment/data/tweets.csv", header=True, inferSchema=True)
-
-df_clean = df.withColumn("text_clean", lower(col("text")))
-df_clean = df_clean.withColumn("text_clean", regexp_replace("text_clean", r"http\S+", ""))
-df_clean = df_clean.withColumn("text_clean", regexp_replace("text_clean", r"@\w+", ""))
-df_clean = df_clean.withColumn("text_clean", regexp_replace("text_clean", r"[^\w\s]", ""))
-df_clean = df_clean.withColumn("text_clean", regexp_replace("text_clean", r"\s+", " "))
-
-df_clean = df_clean.withColumn("tokens", regexp_replace(col("text_clean"), " ", ","))
-
-df_clean = df_clean.withColumn("sentiment_numeric",
-    when(col("sentiment") == "positive", 1)
-    .when(col("sentiment") == "negative", -1)
-    .otherwise(0)
-)
-
-df_clean = df_clean.withColumn("date_formatted", to_date(col("date"), "yyyy-MM-dd"))
-df_clean = df_clean.withColumn("text_length", length(col("text_clean")))
-
-df_clean.show(10, truncate=False)
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aff8aacc",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import SparkSession\n",
+    "from pyspark.sql.functions import col, length, to_date, regexp_replace, lower, when\n",
+    "\n",
+    "spark = SparkSession.builder.appName(\"ProcesamientoTweets\").getOrCreate()\n",
+    "\n",
+    "df = spark.read.csv(\"bigdata-sentiment/data/tweets.csv\", header=True, inferSchema=True)\n",
+    "\n",
+    "df_clean = df.withColumn(\"text_clean\", lower(col(\"text\")))\n",
+    "df_clean = df_clean.withColumn(\"text_clean\", regexp_replace(\"text_clean\", r\"http\\S+\", \"\"))\n",
+    "df_clean = df_clean.withColumn(\"text_clean\", regexp_replace(\"text_clean\", r\"@\\w+\", \"\"))\n",
+    "df_clean = df_clean.withColumn(\"text_clean\", regexp_replace(\"text_clean\", r\"[^\\w\\s]\", \"\"))\n",
+    "df_clean = df_clean.withColumn(\"text_clean\", regexp_replace(\"text_clean\", r\"\\s+\", \" \"))\n",
+    "\n",
+    "df_clean = df_clean.withColumn(\"tokens\", regexp_replace(col(\"text_clean\"), \" \", \",\"))\n",
+    "\n",
+    "df_clean = df_clean.withColumn(\"sentiment_numeric\",\n",
+    "    when(col(\"sentiment\") == \"positive\", 1)\n",
+    "    .when(col(\"sentiment\") == \"negative\", -1)\n",
+    "    .otherwise(0)\n",
+    ")\n",
+    "\n",
+    "df_clean = df_clean.withColumn(\"date_formatted\", to_date(col(\"date\"), \"yyyy-MM-dd\"))\n",
+    "df_clean = df_clean.withColumn(\"text_length\", length(col(\"text_clean\")))\n",
+    "\n",
+    "df_clean.show(10, truncate=False)"
+   ]
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
